@@ -4,12 +4,14 @@
    * Attempt to recover from bad SYLT frames. (#2)
    * Attempt to recover from faulty extended header flags. (#4)
    * Fix a bug in ID3v2.4 footer flag detection, (#5)
- * MP4: Don't fail or double-encode UTF-8 strings when given a str.
+ * MP4:
+   * Don't fail or double-encode UTF-8 strings when given a str.
+   * Don't corrupt 64 bit atom sizes when resizing atoms. (#17)
  * EasyID3: Extension API for defining new "easy" tags at runtime.
  * EasyMP4: Like EasyID3, but for iTunes MPEG-4 files.
  * mutagen.File: New 'easy=True' argument to create new EasyMP3, EasyMP4,
    EasyTrueAudio, and EasyID3FileType instances.
- * mutagen.wav: New RIFF WAVE format loader.
+ * 
 
 1.16 - 2009.06.15
  * Website / code repository move.
